# qa_guru_7_18_poetry

./: README.md  pyproject.toml
