[tool.poetry]
name = "qa-guru-7-18-poetry"
version = "0.1.0"
description = ""
authors = ["A-d-a-m <adam3928@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.4.2"
selene = "2.0.0rc4"

[tool.poetry.group.dev.dependencies]
pylint = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

